--- a/src/index.html
+++ b/src/index.html
@@ -205,37 +205,37 @@
                         <div class="col-md-4">
                             <div class="mobile_item mobile_item_1">
                                 <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
-                                <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                                <div class="mobile_item_plus"></div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="mobile_item mobile_item_2">
                                 <div class="mobile_item_subtitle">надежная подача</div>
-                                <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                                <div class="mobile_item_plus"></div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="mobile_item mobile_item_3">
                                 <div class="mobile_item_subtitle">прозрачные цены</div>
-                                <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                                <div class="mobile_item_plus"></div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="mobile_item mobile_item_4">
                                 <div class="mobile_item_subtitle">безналичная оплата</div>
-                                <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                                <div class="mobile_item_plus"></div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="mobile_item mobile_item_5">
                                 <div class="mobile_item_subtitle">обратная связь</div>
-                                <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                                <div class="mobile_item_plus"></div>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="mobile_item mobile_item_6">
                                 <div class="mobile_item_subtitle">разделить стоимость поездки</div>
-                                <div class="mobile_item_plus"><img src="icons/plus.png" alt="plus"></div>
+                                <div class="mobile_item_plus"></div>
                             </div>
                         </div>
                     </div>
@@ -252,6 +252,84 @@
                     <div class="choice_descr">Машины на каждый день <br>
                         Лучше, быстрее и дешевле, чем такси
                     </div>
+                </div>
+            </section>
+
+            <section class="require">
+                <div class="container">
+                    <div class="label">Возможности</div>
+                    <div class="title">Условия и требования</div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="require_block">
+                            <div class="require_title">
+                                Условия со своим авто
+                            </div>
+                            <ul class="require_list">
+                                <li>Подключаем к системе UBER  под 10%.</li>
+                                <li>Ни каких взносов  0%!</li>
+                                <li>Можем подключать удаленно без приезда в офис</li>
+                                <li>ИП не требуется</li>
+                                <li>Заказы распределяются без учета рейтинга ближай-<br>шим водителям</li>
+                                <li> Работа только по безналичному расчету</li>
+                                <li>Деньги перечисляем на карту водителю или наличны-<br>ми в офисе</li>
+                            </ul>
+                            <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т<br> рублей</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="require_block">
+                            <div class="require_title">
+                                Условия со своим авто
+                            </div>
+                            <ul class="require_list">
+                                <li>Подключаем к системе UBER  под 10%.</li>
+                                <li>Ни каких взносов  0%!</li>
+                                <li>Можем подключать удаленно без приезда в офис</li>
+                                <li>ИП не требуется</li>
+                                <li>Заказы распределяются без учета рейтинга ближай-<br>шим водителям</li>
+                                <li> Работа только по безналичному расчету</li>
+                                <li>Деньги перечисляем на карту водителю или наличны-<br>ми в офисе</li>
+                            </ul>
+                            <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т<br> рублей</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="require_block require_block_nmb">
+                            <div class="require_title">
+                                Условия со своим авто
+                            </div>
+                            <ul class="require_list">
+                                <li>Подключаем к системе UBER  под 10%.</li>
+                                <li>Ни каких взносов  0%!</li>
+                                <li>Можем подключать удаленно без приезда в офис</li>
+                                <li>ИП не требуется</li>
+                                <li>Заказы распределяются без учета рейтинга ближай-<br>шим водителям</li>
+                                <li> Работа только по безналичному расчету</li>
+                                <li>Деньги перечисляем на карту водителю или наличны-<br>ми в офисе</li>
+                            </ul>
+                            <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т<br> рублей</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="require_block require_block_nmb">
+                            <div class="require_title">
+                                Условия со своим авто
+                            </div>
+                            <ul class="require_list">
+                                <li>Подключаем к системе UBER  под 10%.</li>
+                                <li>Ни каких взносов  0%!</li>
+                                <li>Можем подключать удаленно без приезда в офис</li>
+                                <li>ИП не требуется</li>
+                                <li>Заказы распределяются без учета рейтинга ближай-<br>шим водителям</li>
+                                <li> Работа только по безналичному расчету</li>
+                                <li>Деньги перечисляем на карту водителю или наличны-<br>ми в офисе</li>
+                            </ul>
+                            <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т<br> рублей</div>
+                        </div>
+                    </div>
+                </div>   
+                     
                 </div>
             </section>
 
