--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.min.css">
 
 </head>
@@ -372,16 +373,16 @@
                 <div class="footer_wrapper">
                     <div>
                         <div class="footer_social">
-                            <a href="#" class="footer_sociaal_item">
+                            <a href="#" class="footer_social_item">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="#" class="footer_sociaal_item">
+                            <a href="#" class="footer_social_item">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="#" class="footer_sociaal_item">
+                            <a href="#" class="footer_social_item">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="#" class="footer_sociaal_item">
+                            <a href="#" class="footer_social_item">
                                 <i class="fab fa-instagram"></i>
                             </a>
                         </div>
