--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,11 @@
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
                 </ul>
             </div>
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
 
         </nav>
         <div class="subheader">
@@ -35,9 +40,9 @@
                         <div class="subheader_official">Официальный партнер Uber в Москве</div> 
     
                     </div>
-                    <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
+                    <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                        <div class="subheader_call">Звоните нам ежедневно</div>
-                           <a href="tel:88007870988" class="subheader_phone">8 800 787 09 88</a>
+                           <a href="tel:88007870988" class="xs-visible subheader_phone">8 800 787 09 88</a>
                        
                     </div>  
                     <div class="col-md-3 col-lg-2">
