--- a/src/index.html
+++ b/src/index.html
@@ -35,17 +35,18 @@
         <div class="subheader">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 offset-md-1">
+                    <div class="col-6 col-md-4 offset-md-1">
                         <a href="#" class="subheader_logo"><img src="icons/logo.png" alt="logo"></a> 
                         <div class="subheader_official">Официальный партнер Uber в Москве</div> 
     
                     </div>
                     <div class="xs-hidden col-md-3 offset-md-1 col-xl-2 offset-xl-2">
                        <div class="subheader_call">Звоните нам ежедневно</div>
-                           <a href="tel:88007870988" class="xs-visible subheader_phone">8 800 787 09 88</a>
+                           <a href="tel:88007870988" class="subheader_phone">8 800 787 09 88</a>
                        
                     </div>  
-                    <div class="col-md-3 col-lg-2">
+                    <div class="col-6 col-md-3 col-lg-2">
+                        <a href="tel:88007870988" class="xs-visible subheader_phone">8 800 787 09 88</a>
                         <button class="subheader_btn">Заказать звонок</button>
                     </div>     
                 </div>
