--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UBER</title>
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
@@ -18,8 +19,8 @@
             <div class="container">
                 <ul class="menu">
                     <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
-                    <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+                    <li class="menu_item"><a href="#require" class="menu_link">Со своим автомобилем</a></li>
+                    <li class="menu_item"><a href="#require" class="menu_link">На автомобиле компании</a></li>
                     <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
                     <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
                     <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
@@ -45,7 +46,7 @@
                            <a href="tel:88007870988" class="subheader_phone">8 800 787 09 88</a>
                        
                     </div>  
-                    <div class="col-6 col-md-3 col-lg-2">
+                    <div class="col-6 col-md-3 ">
                         <a href="tel:88007870988" class="xs-visible subheader_phone">8 800 787 09 88</a>
                         <button class="subheader_btn">Заказать звонок</button>
                     </div>     
@@ -270,7 +271,7 @@
                 </div>
             </section>
 
-            <section class="require">
+            <section class="require" id="require">
                 <div class="container">
                     <div class="label">Возможности</div>
                     <div class="title">Условия и требования</div>
@@ -427,6 +428,6 @@
             </footer>
 
 
-       <script src="/js/script.js"></script>
+       <script src="js/script.js"></script>
 </body>
 </html>
